<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/options_fragment"
        android:tag="options"
        tools:context=".MainActivity" tools:layout_editor_absoluteY="81dp" tools:layout_editor_absoluteX="0dp">
    <TextView
            style="@style/TextBox"
            android:text="@string/info"
            android:textAlignment="center"
            android:layout_width="374dp"
            android:layout_height="262dp" android:id="@+id/info"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.156"/>
    <Button
            style="@style/Button"
            android:text="@string/live_data"
            android:backgroundTint="@color/lime"
            android:layout_width="224dp"
            android:layout_height="58dp" android:id="@+id/live_data"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.563" app:layout_constraintHorizontal_bias="0.497"/>
    <Button
            style="@style/Button"
            android:text="@string/shared_preferences"
            android:backgroundTint="@color/lime"
            android:layout_width="224dp"
            android:layout_height="58dp" android:id="@+id/shared_preferences"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.72" app:layout_constraintHorizontal_bias="0.497"/>
</androidx.constraintlayout.widget.ConstraintLayout>