<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/numbers_fragment"
        android:tag="live_data"
        tools:context=".MainActivity" tools:layout_editor_absoluteY="81dp" tools:layout_editor_absoluteX="0dp">
    <Button
            style="@style/Button"
            android:text="@string/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_button"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.891" android:visibility="visible"/>
    <TextView
            style="@style/TextBox"
            android:layout_width="380dp"
            android:layout_height="186dp" android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.483" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.33"/>
    <Button
            style="@style/Button"
            android:text="@string/generate"
            android:backgroundTint="@color/lime"
            android:layout_width="224dp"
            android:layout_height="58dp" android:id="@+id/generate"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.607" app:layout_constraintHorizontal_bias="0.497"/>
    <Button
            style="@style/Button"
            android:text="@string/swap"
            android:backgroundTint="@color/lime"
            android:layout_width="224dp"
            android:layout_height="58dp" android:id="@+id/swap"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.739" app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            style="@style/TextBox"
            android:layout_width="362dp"
            android:layout_height="92dp" android:id="@+id/redrawn_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.065"
            app:layout_constraintHorizontal_bias="0.489"/>
</androidx.constraintlayout.widget.ConstraintLayout>